--- a/package.json
+++ b/package.json
@@ -22,18 +22,18 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
-    "@nestjs/config": "^0.5.0",
+    "@nestjs/config": "^0.6.1",
     "@nestjs/core": "^7.0.0",
     "@nestjs/jwt": "^7.2.0",
-    "@nestjs/passport": "^7.1.0",
+    "@nestjs/passport": "^7.1.3",
     "@nestjs/platform-express": "^7.0.0",
-    "@nestjs/serve-static": "^2.1.3",
-    "@nestjs/typeorm": "^7.1.4",
+    "@nestjs/typeorm": "^7.1.5",
     "bcrypt": "^5.0.0",
-    "nestjs-typeorm-paginate": "^2.2.1",
+    "mysql": "^2.18.1",
+    "nestjs-typeorm-paginate": "^2.2.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "pg": "^8.4.2",
+    "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
@@ -42,10 +42,11 @@
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.0",
+    "@nestjs/testing": "^7.5.4",
     "@types/express": "^4.17.3",
     "@types/jest": "26.0.10",
     "@types/node": "^13.9.1",
+    "@types/passport": "^1.0.4",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.9.1",
     "@typescript-eslint/parser": "3.9.1",
